fixed sigil modal size and mobile white space

--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -12,6 +12,14 @@
     padding: 0;
 }
 
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .splash {
     width: 100%;
     height: 100vh;
@@ -117,8 +125,8 @@ video {
 .sigilModal {
     mix-blend-mode: difference;
     margin: auto;
-    width: 300px;
-    height: 300px;
+    width: 220px;
+    height: 200px;
     border-radius: 50%;
     z-index: -1;
 }
